# BoxySeq

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  ISSUES  KEYBOARD_SHORTCUTS  Makefile  NEWS  README  README.run  TODO  box_grid.c  box_grid.h  boxy_sequencer.c  boxy_sequencer.h  boxyseq.h  common.c  common.h  debug.c  debug.h  event.c  event.h  event_buffer.c  event_buffer.h  event_list.h  event_pool.c  event_pool.h  event_port.c  event_port.h  event_port_manager.h  freespace_boundary.c  freespace_boundary.h  freespace_state.c  freespace_state.h  grbound_manager.c  grbound_manager.h  grid_boundary.c  grid_boundary.h  (+29 more)
boxyseq_gtk/: CMakeLists.txt  gui_boxyseq.h  gui_main.c  gui_pattern.c
boxyseq_gtk_cairo/: CMakeLists.txt  gui_grid.c  gui_main.h  main.c
boxyseq_gtk_cairo/include/: gui_grid_editor.h
boxyseq_gui/: CMakeLists.txt  boxyseq_gui  gui_boundary_list.c  gui_boundary_list.h  gui_box.c  gui_box.h  gui_grid.c  gui_grid.h  gui_main.c  gui_main.h  gui_misc.c  gui_misc.h  main.c
boxyseq_gui/include/: gui_boundary_list_data.h  gui_box_data.h  gui_grid_editor.h  gui_main_editor.h
freespace_test/: CMakeLists.txt  freespace_test.c
include/: boxy_sequencer_data.h  event_pattern.h  freespace_boundary_data.h  grid_boundary_data.h  gui_grid_editor.h
libboxyseq/: CMakeLists.txt  basebox.c  basebox.h  box_grid.c  box_grid.h  boxy_sequencer.c  boxy_sequencer.h  boxyseq_types.h  common.c  common.h  datacb.h  debug.c  debug.h  event.c  event.h  event_buffer.c  event_buffer.h  event_list.c  event_list.h  event_pool.c  event_pool.h  event_port.c  event_port.h  event_port_manager.c  event_port_manager.h  freespace_boundary.c  freespace_boundary.h  freespace_state.c  freespace_state.h  grbound_manager.c  grbound_manager.h  grid_boundary.c  grid_boundary.h  jack_process.c  jack_process.h  llist.c  llist.h  midi_out_port.c  midi_out_port.h  moport_manager.c  (+9 more)
libboxyseq/include/: boxy_sequencer_data.h  event_pattern_data.h  event_port_data.h  grid_boundary_data.h  jack_process_data.h  midi_out_port_data.h
tmp/: README  boxy_sequencer.c  boxyseq  common.c  common.h  datacb.h  event.h  event_buffer.c  event_pool.c  event_pool.h  event_port.c  freespace_state.c  jack_midi.c  jack_midi.h  llist.h  main.c  midi_out_port.c  midi_out_port.h  p  pattern.c  pattern.h
tmp/tmp/: event.c  event_port.h  grid_boundary.c  jack_transport.c  jack_transport.h  show_gcc_line
